Updated contact details

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         <div class="footer-links">
             <a href="#" onclick="showPrivacy()">Privacy Policy</a>
             <a href="#" onclick="showTerms()">Terms of Service</a>
-            <a href="mailto:support@anontalk.app?subject=Support Request">Support</a>
-            <a href="mailto:contact@anontalk.app?subject=General Inquiry">Contact</a>
+            <a href="mailto:akshatpaul82@gmail.com?subject=Support Request">Support</a>
+            <a href="mailto:akshatpaul82@gmail.com?subject=General Inquiry">Contact</a>
         </div>
         <p class="footer-text">
             © 2025 AnonTalk. Built with ❤️ for authentic human connection.
@@ -200,7 +200,7 @@
             // Simulate download preparation
             setTimeout(() => {
                 // Replace this with your actual APK download link
-                // const apkUrl = 'https://expo.dev/artifacts/eas/rwRsa2Vxo6QomUTVb5vtVA.apk'; // Replace with actual APK URL
+
                 const apkUrl = 'https://drive.google.com/uc?export=download&id=1z1jnDsfW-P1u-oOz7MooPal6pEFjy8Rz'; // Replace with actual APK URL
 
                 // Create download link
