--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             setTimeout(() => {
                 // Replace this with your actual APK download link
 
-                const apkUrl = 'https://drive.google.com/uc?export=download&id=1z1jnDsfW-P1u-oOz7MooPal6pEFjy8Rz'; // Replace with actual APK URL
+                const apkUrl = 'https://expo.dev/artifacts/eas/rwRsa2Vxo6QomUTVb5vtVA.apk'; // Replace with actual APK URL
 
                 // Create download link
                 const link = document.createElement('a');
